--- a/index.html
+++ b/index.html
@@ -41,16 +41,11 @@
        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
        <meta name="msapplication-starturl" content="/">
        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-       <link rel="icon" type="image/png" sizes="72x72" href="icon_android1.png">
-       <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="icon_android1.png">
-       <link rel="icon" type="image/png" sizes="48x48" href="icon_android2.png">
-       <link rel="apple-touch-icon" type="image/png" sizes="48x48" href="icon_android2.png">
-       <link rel="icon" type="image/png" sizes="96x96" href="icon_android3.png">
-       <link rel="apple-touch-icon" type="image/png" sizes="96x96" href="icon_android3.png">
-       <link rel="icon" type="image/png" sizes="144x144" href="icon_android4.png">
+      
        <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="icon_android4.png">
-       <link rel="icon" type="image/png" sizes="192x192" href="icon_android5.png">
-       <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="icon_android5.png">
+       <link rel="icon" type="image/png" sizes="192x192" href="img/android/icon_android4.png">
+       <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="img/android/icon_android5.png">
+       <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="img/ios/512.png">
 
 
        
