--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,9 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
+        <meta name="theme-color" content="#d63384">
+        <link rel="manifest" href="/manifest.json">
+
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
