--- a/contact.html
+++ b/contact.html
@@ -219,14 +219,14 @@
         <!-- Contact End -->
 
          <!-- Footer Start -->
-         <div class="container-fluid footer py-5 wow fadeIn d-none d-md-block" data-wow-delay="0.1s">
+        <div class="container-fluid footer py-5 wow fadeIn d-none d-md-block" data-wow-delay="0.1s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
-                                <h4 class="text-white mb-4">JustDanc</h4>
-                                <p class="text-white mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                                <h4 class="text-white mb-4">JustDance</h4>
+                                <p class="text-white mb-3"> Dançamos juntos, criamos laços eternos. Just Dance, onde os sonhos se tornam passos</p>
                                 <div class="d-flex">
                                     <a class="btn btn-lg-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-lg-square btn-primary rounded-circle mx-2" href=""><i class="fab fa-twitter"></i></a>
@@ -238,48 +238,48 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Address</h4>
+                            <h4 class="text-white mb-4">Endereço</h4>
                             <div class="d-flex align-items-center mb-3">
                                 <a class="btn btn-lg-square btn-primary rounded-circle mx-2" href=""><i class="fas fa-map-marker-alt"></i></a>
                                 <div class="text-white ms-2">
-                                    <p class="mb-0">0123.. Street, New York, USA</p>
+                                    <p class="mb-0">Av. Dr. Cláudio José Gueiros Leite, 5284 - Pau Amarelo, Paulista - PE</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center mb-3">
                                 <a class="btn btn-lg-square btn-primary rounded-circle mx-2" href=""><i class="fa fa-phone-alt"></i></a>
                                 <div class="text-white ms-2">
-                                    <p class="mb-0">+012 345 67890</p>
-                                    <p class="mb-0">+012 345 67890</p>
+                                    <p class="mb-0">81 99999 - 7777</p>
+                                  
                                 </div>
                             </div>
                             <div class="d-flex align-items-center">
                                 <a class="btn btn-lg-square btn-primary rounded-circle mx-2" href=""><i class="fas fa-envelope"></i></a>
                                 <div class="text-white ms-2">
-                                    <p class="mb-0">info@example.com</p>
-                                    <p class="mb-0">info@example.com</p>
+                                    <p class="mb-0">justdanceescola@gmail.com</p>
+                                 
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Quick Links</h4>
-                            <a href="#" class="footer-link"> About Us</a>
-                            <a href="#" class="footer-link"> Classes</a>
-                            <a href="#" class="footer-link"> Privacy Policy</a>
-                            <a href="#" class="footer-link"> Terms & Conditions</a>
-                            <a href="#" class="footer-link"> Schedule</a>
+                            <h4 class="text-white mb-4">Acesso Rápido</h4>
+                            <a href="#" class="footer-link"> Sobre nós</a>
+                            <a href="#" class="footer-link"> Modalidades</a>
+                            <a href="#" class="footer-link"> Política de Privacidade</a>
+                            <a href="#" class="footer-link"> Termos e Condições</a>
+                            <a href="#" class="footer-link"> Horários</a>
                             <a href="#" class="footer-link"> FAQ</a>
-                            <a href="#" class="footer-link"> Contact Us</a>
+                            <a href="#" class="footer-link"> Contato</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
                                 <h4 class="text-white mb-4">Newsletter</h4>
-                                <p class="text-white mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                                <p class="text-white mb-3">Assine nossa newsletter e fique por dentro de tudo o que fazemos</p>
                                 <div class="position-relative mx-auto rounded-pill">
-                                    <input class="form-control rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
+                                    <input class="form-control rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Seu email">
                                     <button type="button" class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
                                 </div>
                             </div>
