--- a/contact.html
+++ b/contact.html
@@ -117,13 +117,14 @@
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.1s">
                             <h2 class="display-5 mb-2">Form</h2>
-                            <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                            
                             <form>
                                 <div class="row g-3">
                                     <div class="col-lg-12 col-xl-6">
                                         <div class="form-floating">
                                             <input type="text" class="form-control" id="name" placeholder="Your Name">
                                             <label for="name">Seu nome</label>
+                                            <a href="mailto:justdanceescola@gmail.com">Enviar e-mail</a>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 col-xl-6">
@@ -136,6 +137,7 @@
                                         <div class="form-floating">
                                             <input type="phone" class="form-control" id="phone" placeholder="Phone">
                                             <label for="phone">Seu telefone</label>
+                                            <a href="https://wa.me/5548999999999?text=Eu%20quero%20fazer%20um%20pedido"> waa me</a>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 col-xl-6">
@@ -208,7 +210,7 @@
                         <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="rounded h-100 pb-3">
                                 <iframe class="rounded w-100" 
-                                style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1694259649153!5m2!1sen!2sbd" 
+                                style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3951.8435758837113!2d-34.82608352615769!3d-7.911404092111887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab3e5e9ec172d5%3A0x3f15fe59633f206!2sStudio%20de%20Dan%C3%A7a%20Classe%20A!5e0!3m2!1spt-BR!2sbr!4v1711068919101!5m2!1spt-BR!2sbr" 
                                 loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
